[package]
name = "program"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
solana-program = "1.8.0"
borsh="0.9.1"
borsh-derive="0.9.1"
lazy_static = "1.4.0"


[lib]
name = "custom"
crate-type = ["cdylib", "lib"]
